add node_modules to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 .cache/dd/75e2293a505b4dec964e0ad5014323.json
 .cache/e0/fa9a5edd3c31fffb4324299013a547.json
 .cache/f1/89f3535bf855ae029ed991f01f2876.json
+node_modules/
